# manganatoapi

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
manganatoapi/: __init__.py  exceptions.py  settings.py  utils.py
manganatoapi/middlewares/: camel_case.py
manganatoapi/services/: image.py  manga.py  request.py
manganatoapi/views/v1/: chapter.py  image.py  manga.py
